Reroute messages that are routed wrongly

--- a/conf/defaults.yaml
+++ b/conf/defaults.yaml
@@ -170,6 +170,8 @@ topology.acker.executors: null
 topology.tasks: null
 # maximum amount of time a message has to complete before it's considered failed
 topology.message.timeout.secs: 30
+# amount of time a message with routing error has to wait before retry
+topology.message.retry.secs: 1
 topology.multilang.serializer: "backtype.storm.multilang.JsonSerializer"
 topology.skip.missing.kryo.registrations: false
 topology.max.task.parallelism: null
